# skia

./: BUILD.gn  DEPS  README.md  conanfile.py
android/: build.gradle
android/include/: Skia.h
android/src/main/cpp/: CMakeLists.txt  NativeRendererInterface.cpp
android/src/main/java/: NativeRendererInterface.java
blink/wtf/: Alignment.h  Compile.h  WTFExport.h
experimental/ffmpeg/: BUILD.gn  SkVideoDecoder.cpp
gn/: core.gni  skia.gni
modules/photoeditor/: BUILD.gn
modules/photoeditor/include/: PhotoEditor.h
modules/photoeditor/src/: PhotoEditor.cpp
modules/skottie/: BUILD.gn  skottie.gni
modules/skottie/include/: Skottie.h  SkottieProperty.h
modules/skottie/src/: Composition.cpp  Layer.cpp  Skottie.cpp  SkottiePriv.h  SkottieProperty.cpp
modules/skottie/src/layers/: PrecompLayer.cpp
modules/skottie/src/text/: TextAdapter.cpp  TextValue.cpp
modules/skottie/utils/: SkottieUtils.cpp  SkottieUtils.h
modules/skresources/include/: SkResources.h
modules/skresources/src/: SkResources.cpp
modules/sksg/src/: SkSGMaskEffect.cpp
modules/svg/: BUILD.gn  svg.gni
modules/svg/include/: SkSVGAttribute.h  SkSVGDOM.h  SkSVGDesc.h  SkSVGFeGaussianBlur.h  SkSVGImage.h  SkSVGNode.h  SkSVGRenderContext.h  SkSVGSVG.h
modules/svg/src/: SkSVGAttributeParser.cpp  SkSVGDOM.cpp  SkSVGFeGaussianBlur.cpp  SkSVGImage.cpp  SkSVGRenderContext.cpp  SkSVGSVG.cpp
modules/svg/utils/: SvgTool.cpp
modules/svgif/: BUILD.gn  SvgifTool.cpp  svgif.gni
modules/svgif/include/: SVGDOM.h  SVGIDMapper.h  SVGNode.h  SVGText.h  SVGTransformableNode.h  SVGTypes.h
modules/svgif/src/: SVGDOM.cpp
profile/: Android-armv7-release  Android-armv8-release  Linux-x86_64-release  iOS-armv7-release  iOS-armv8-release  macOS-x86_64-release
resources/skottie/: skottie-audio-sample-1.json  skottie-still-image.json  skottie_sample_multiframe.json
resources/skottie/mask/: data.json
tools/: skottie2movie.cpp
tools/movie_renderer/: MovieRenderer.cpp
tools/render/: AnimationComponent.h  AudioFifo.cpp  AudioFifo.h  AudioInput.h  Engine.cpp  Engine.h  EngineUtils.h  FFmpegComponent.h  FFmpegContext.h  ImageOutput.h  ImageOutputSystem.cpp  ImageOutputSystem.h  Logger.h  MainRender.cpp  MoveOnly.h  OutputConfig.h  OutputConfigComponent.h  RenderComponent.h  RenderSystem.cpp  RenderSystem.h  System.h  VideoGenerateSystem.cpp  VideoGenerateSystem.h
