import("../../gn/skia.gni")

if (skia_enable_svgif) {
  config("public_config") {
    defines = [ "SK_ENABLE_SVGIF" ]
    include_dirs = [ "include" ]
  }

  component("svgif") {
    check_includes = false
    import("svgif.gni")
    public_configs = [ ":public_config" ]
    public = skia_svgif_public
    sources = skia_svgif_sources
    configs += [ "../../:skia_private" ]
    deps = [ "../..:skia" ]
  }

  if (skia_enable_tools && defined(is_skia_standalone)) {
    source_set("tool") {
      check_includes = false
      testonly = skia_use_libjpeg_turbo_encode

      configs += [ "../..:skia_private" ]
        sources = [ "SvgifTool.cpp" ]

        deps = [
          "../..:flags",
          "../..:skia",
        ]

        public_deps = [ ":svgif" ]
      }
    }
} else {
  group("svgif") {

  }
}
